TAG: egload-tr9773-BP
DATE: 02/08/2010
STAFF: sc
CHANGES: Branch Point tag for MGI4.33

TAG: egload-4-1-1-1
DATE: 08/01/2008
STAFF: sc
CHANGES: merged tr8543_3 to trunk

TAG: egload-tr8543_3-2
TAG: egload-tr8543_3-1
DATE: 07/17/2008
STAFF: sc
CHANGES:
1) Removed: GUIdsLookup and GUQuery
2) Added html formatting of NCBI Gene Model IDs no longer in EG
3) Removed MGIMarkerQuery.MGIMarker attributes which can now be just 
     bucketized attributes
4) Same as above for EntrezGeneQuery
5) EntrezGeneBucketizer - more comments, slight change to  GMs with no 
     EntrezGene Id report
6) added new report to index.html
7) renamed creatSeqeunceAssociations to createAssociations because
     it does homologene group ids too
8) factored makeSeqAssociationToMarker out of createAssociations so
     checking for problem clone associations is done in one place
9) fixed bug in processing zero-to-one bucket
     for non 1:1 need to iterate over members
     not associations; there are no associations
     for zero-to-one only a single EG member

TAG: egload-tr8543_3-BP
DATE: 07/17/2008
STAFF: sc
CHANGES: tr8543_2 was discarded

TAG: egload-tr8543_2-BP
DATE: 06/26/2008
STAFF: sc
CHANGES: branch point tag for reopened tr8543

TAG: egload-4-0-0-8
DATE: 06/17/2008
STAFF: sc
CHANGES: GUIdsByMarkerKeyLookup change query order 
	by _Marker_key instead of EGID

TAG: egload-4-0-0-7
DATE: 05/07/2008
STAFF: sc
CHANGES: merge tr8543 branch to trunk

TAG: egload-tr8543-4
TAG: egload-tr8543-3
TAG: egload-tr8543-2
TAG: egload-tr8543-1
DATE: 04/17/2008
DATE: 04/15/2008
STAFF: lec
CHANGES:
1) added GUIdsByMarkerKeyLookup
2) added GUQuery
3) added GUIdsLookup
4) updated EntrezGeneBucketizer
5) updated EntrezGeneLoader

TAG: egload-tr8543-BP
DATE: 03/26/2008
STAFF: lec
CHANGES:
1) branch point tag for TR8543

TAG: egload-tr8832-BP
DATE: 03/06/2008
STAFF: lec
CHANGES:
1) branch point tag for TR8832

TAG: egload-4-0-0-6
DATE: 03/05/2008
STAFF: lec
CHANGES: