@@ -1,3 +1,10 @@
+TAG: egload-tr9773-1
+DATE: 02/08/2010
+STAFF: sc
+CHANGES:
+1) initial commit of radarPreprocess.py (.sh)
+2) egload.config.default added UPDATE_FILE setting
+
 TAG: egload-tr9773-BP
 DATE: 02/08/2010
 STAFF: sc
